syntax = "proto3";

option csharp_namespace = "Proton.Sdk.Drive.CExports";

message FileUploaderProvisionRequest {
    string parent_folder_uid = 1;
    string name = 2;
    string mediaType = 3;
    int64 file_size = 4;
    int64 last_modification_date = 5;
    bool create_new_revision_if_exists = 6;
}

message FileRevisionUploaderProvisionRequest {
    string current_active_revision_uid = 1;
    int64 file_size = 2;
    int64 last_modification_date = 3;
}

message ProgressUpdate {
    int64 bytes_completed = 1;
    int64 bytes_in_total = 2;
}

message FileDownloaderProvisionRequest {
    string revision_uid = 1;
}
